--- a/Src/Space/Pages/Index.razor
+++ b/Src/Space/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/";
 
 @using Space.Models;
+@using SpaceTraders.Model;
 
 @implements IDisposable;
 
@@ -21,7 +22,7 @@
 
     <div class="panel">
         <h2>Ships</h2>
-        @foreach (var ship in this.Application.Ships.Values.Select(o => o.Value))
+        @foreach (var ship in this.Application.AgentShips.Values.Select(o => o.Value))
         {
             <div class="panel">
                 <div>@ship.Registration.Name - @ship.Registration.Role</div>
@@ -63,27 +64,56 @@
 
 @code {
     private ElementReference mRenderCanvas;
+    private bool mIs3DReady = false;
+    private IJSObjectReference? mMapModule;
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
 
         this.Application.Changed += this.Application_Changed;
+        this.Application.VisibleSystemWaypoints.Changed += this.VisibleSystemWaypoints_Changed;
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await base.OnAfterRenderAsync(firstRender);
 
-        var mapJsModule = await JS.InvokeAsync<IJSObjectReference>(
-                "import", "./js/map.js");
+        if (!firstRender)
+        {
+            return;
+        }
 
-        await mapJsModule.InvokeVoidAsync("doTheThing", mRenderCanvas);
+        mMapModule =
+            await JS.InvokeAsync<IJSObjectReference>(
+                "import", 
+                "./js/map.js");
+
+        await mMapModule.InvokeVoidAsync("initialize", mRenderCanvas);
+
+        mIs3DReady = true;
+
+        var waypoints = this.Application.VisibleSystemWaypoints.Values.Select(o => o.Value).ToArray();
+        await mMapModule!.InvokeVoidAsync("setWaypoints", new[] { waypoints });
     }
 
     private void Application_Changed()
     {
         _ = this.InvokeAsync(this.StateHasChanged);
+    }
+
+    private void VisibleSystemWaypoints_Changed(ObservableCollection<Waypoint> _observable)
+    {
+        if (!mIs3DReady)
+        {
+            return;
+        }
+
+        this.InvokeAsync(async () =>
+        {
+            var waypoints = this.Application.VisibleSystemWaypoints.Values.Select(o => o.Value).ToArray();
+            await mMapModule!.InvokeVoidAsync("setWaypoints", new[] { waypoints });
+        });
     }
 
     public void Dispose()
