--- a/Src/Space/Pages/Account/Register.razor
+++ b/Src/Space/Pages/Account/Register.razor
@@ -1,4 +1,4 @@
-﻿@page "/register"
+﻿@page "/account/register"
 
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
 @using Space.Meta;
@@ -12,9 +12,8 @@
 <PageTitle>Space - Register</PageTitle>
 
 <div style="display:flex; flex-direction:column;">
-
-    <div style="padding: 1em; display:flex; flex-direction:column; gap: 1em;">
-        <h1>RegisterAccount</h1>
+    <div style="padding:1em; display:flex; flex-direction:column; gap:1em;">
+        <h1>Account Register</h1>
 
         <form onsubmit="return false">
             <label>
