--- a/Src/Space/Pages/Index.razor
+++ b/Src/Space/Pages/Index.razor
@@ -24,7 +24,7 @@
         <div style="display:flex; flex-wrap:wrap; gap:1em;">
             @foreach (var ship in this.Application.Ships.Values)
             {
-                <ShipView Ship=@ship />
+                <ShipCardView Ship=@ship />
             }
         </div>
     </div>
