--- a/Src/Space/Components/AccountComponent.razor
+++ b/Src/Space/Components/AccountComponent.razor
@@ -25,9 +25,13 @@
                 }
             </select>
         </label>
-        <button @onclick=this.ForgetButton_Click>Forget</button>
-        <a href="/register">New</a>
-        <a href="/import">Import</a>
+        @if (!string.IsNullOrEmpty(this.SelectedAccountKey))
+        {
+            <button @onclick=this.ForgetButton_Click>Forget</button>
+            <button @onclick=this.ViewKeyButton_Click title="Click to log your key to the console.">Export</button>
+        }
+        <a href="/account/register">Register</a>
+        <a href="/account/import">Import</a>
     </div>
 
     @if (this.Application.Agent.Value is not null)
@@ -101,6 +105,11 @@
         this.SelectedAccountKey = newAccounts.FirstOrDefault()?.Key;
 
         this.StateHasChanged();
+    }
+
+    private async Task ViewKeyButton_Click()
+    {
+        await this.JsRuntime.InvokeVoidAsync("console.log", $"Key for \"{mAccounts.FirstOrDefault(a => a.Key == this.SelectedAccountKey)?.Name}\": {this.SelectedAccountKey}");
     }
 
     private void ApplicationAgent_Changed(Observable<Agent?> observable)
