--- a/Src/Space/Components/ShipCardView.razor
+++ b/Src/Space/Components/ShipCardView.razor
@@ -13,17 +13,20 @@
         return;
     }
 
-    this.NavigationManager.TryGetQueryString(Navigation.SELECTED_SHIP_QUERY_STRING_KEY, out var selectedShip);
-    var isSelectedClass = selectedShip == this.Ship.Value.Registration.Name ? "selected" : null;
+    var isSelectedClass =
+        this.NavigationManager.TryGetQueryString(Navigation.SELECTED_SHIP_QUERY_STRING_KEY, out var selectedShip) &&
+        selectedShip == this.Ship.Value.Registration.Name ? "selected" : null;
 }
 
 <div class="panel ship @isSelectedClass">
-    <a href=@this.NavigationManager.GetUriWithQueryParameter(Navigation.SELECTED_SHIP_QUERY_STRING_KEY, this.Ship.Value.Registration.Name)
-       title="@this.Ship.Value.Frame.Description">
-        @this.Ship.Value.Registration.Role-@this.Ship.Value.Frame.Symbol
-    </a>
+    <span>
+        <a href=@this.NavigationManager.GetUriWithQueryParameter(Navigation.SELECTED_SHIP_QUERY_STRING_KEY, this.Ship.Value.Registration.Name)>
+            @this.Ship.Value.Symbol
+        </a>
+        <span title="@this.Ship.Value.Frame.Description">(@this.Ship.Value.Registration.Role-@this.Ship.Value.Frame.Symbol)</span>
+    </span>
 
-    @if(this.ShowFuel)
+    @if (this.ShowFuel && this.Ship.Value.Fuel.Capacity > 0)
     {
         <div>Fuel: @this.Ship.Value.Fuel.Current / @this.Ship.Value.Fuel.Capacity</div>
     }
@@ -38,7 +41,7 @@
         <div>Crew: @this.Ship.Value.Crew.Current / @this.Ship.Value.Crew.Capacity</div>
         if (this.ShowCrewMorale)
         {
-            <div>Crew Morale: @this.Ship.Value.Crew.Morale</div>
+            <div>Crew Morale: @this.Ship.Value.Crew.Morale%</div>
         }
     }
 
@@ -64,10 +67,6 @@
             border-color: var(--selection-color);
             box-shadow: 0 0 .2em .1em var(--selection-color);
         }
-
-    ul {
-        padding-left: 1em;
-    }
 </style>
 
 @code {
