--- a/Src/Space/MainLayout.razor
+++ b/Src/Space/MainLayout.razor
@@ -1,3 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using MudBlazor;
+
+@inherits LayoutComponentBase;
+
+@*<MudThemeProvider IsDarkMode=true />*@
 
 <main> @Body </main>
